# oncall-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
oncall_env/: __init__.py  client.py  models.py  pyproject.toml  requirements.txt
oncall_env/scenarios/: __init__.py  easy_scenarios.json  hard_scenarios.json  medium_scenarios.json
oncall_env/server/: __init__.py  alert_generator.py  app.py  environment.py  log_generator.py  metrics_generator.py  scenario_engine.py
oncall_env/tasks/: __init__.py  graders.py  task_definitions.py
oncall_env/tests/: __init__.py  test_client_session_flow.py  test_environment.py  test_graders.py  test_integration.py  validate_phase1.py  validate_phase2.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validate_phase6.py  validate_phase7.py
server/: __init__.py  app.py
