[project]
name = "oncall-env"
version = "0.1.0"
description = "Incident Triage OpenEnv Environment"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rohit Mishra", email = "rohit20032012@gmail.com"}]

dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
